# mpi4py

./: .appveyor.yml  .binstar.yml  .codespellrc  .coveragerc  .cython-lint.toml  .flake8  .git-blame-ignore-revs  .gitignore  .mailmap  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .pytest.ini  .readthedocs.yaml  .ruff.toml  .spin.toml  .travis.yml  .vermin  .yamllint.yml  CHANGES.rst  CITATION.cff  CITATION.rst  CMakeLists.txt  DESCRIPTION.rst  HISTORY.txt  INSTALL.rst  LICENSE.rst  LICENSE.txt  MANIFEST.in  README.rst  README.txt  THANKS.txt  appveyor.yml  bitbucket-pipelines.yml  cythonize.bat  cythonize.sh  makefile  meson.build  meson.options  mpi.cfg  (+6 more)
.azure/: install-mpich.sh  install-msmpi.ps1  install-msmpi.sh  install-openmpi.sh  pipelines.yml  steps.yml
.ci/: env.impi  env.mpich  env.msmpi  env.openmpi  shellcheck.sh
.circleci/: anaconda.sh  config.yml  env.sh  step-coverage  step-install  step-setup  test-package  upload-coverage
.github/: dependabot.yml  zizmor.yml
.spin/: cmds.py
cibw/: auditwheel.py  check-wheels.sh  config.toml  delocate-wheel.py  install-mpi.sh  merge-wheels.py  patch-tools.sh  repair-wheel.sh  run-tests-conda.sh  run-tests-mpi.sh  run-tests-pypip.sh  run-tests-uvpip.sh  run-tests.sh  setup-matrix.py  wheel-build.sh  wheel-check.sh  wheel-test-Linux.sh  wheel-test-Windows.sh  wheel-test-basic.sh  wheel-test-docker.sh  wheel-test-macOS.sh
conf/: CMakeLists.txt  MANIFEST.in  build-cmake.sh  build-meson.sh  builder.py  coverage-helper.py  coverage.sh  cyautodoc.py  cycoverage.py  cycoverage.sh  cythoncmd.py  cythonize.bat  cythonize.py  cythonize.sh  docutils.conf  epydoc.cfg  epydocify.py  getversion.py  jenkins-fedoracloud.sh  metadata.py  metadata.toml  mpiapigen.py  mpiconfig.py  mpidistutils.py  mpiregexes.py  mpiscanner.py  mpistubgen.py  mypy.ini  mypy.stubtest.allow.txt  pyproject-meson.toml  requirements-build-cython.txt  requirements-build-mesonpy.txt  requirements-build-skbuild.txt  requirements-docs.txt  requirements-lint.txt  requirements-test.txt  requirements-type.txt  shellcheck.sh  tox.ini  travis-install-mpi.sh
conf/anaconda/mpi4py/: meta.yaml
conf/appveyor/: install-anaconda.ps1  install-msmpi.ps1  install-python.ps1  run_with_env.cmd
conf/ci/: anaconda.sh  appveyor-artifacts.py  bitbucket.sh  fedoracloud.sh  mca-params.conf
conf/ci/anaconda/mpi4py/: meta.yaml
conf/ci/appveyor/: build.cmd  download.ps1  get-artifacts.py  install-anaconda.ps1  install-msmpi.ps1
conf/ci/travis-ci/: install-mpi.sh
conf/conda-recipe/: meta.yaml
conf/conda-recipes/mpe/: .binstar.yml  build.sh  meta.yaml
conf/conda-recipes/mpe/test/: helloworld.c
conf/conda-recipes/mpi4py/: .binstar.yml  bld.bat  meta.yaml
conf/conda-recipes/mpich/: .binstar.yml  build.sh  meta.yaml
conf/conda-recipes/openmpi/: .binstar.yml  build.sh  meta.yaml
conf/jenkins/: fedoracloud.sh
conf/mpiuni/: mpi.h
conf/nompi/: mpi.h  pympiconf.h
conf/nompi/config/: config.h
conf/travis/: install-mpi.sh
demo/: README.txt  config.mk  helloworld.c  helloworld.cxx  helloworld.py  makefile  osu_allgather.py  osu_alltoall.py  osu_alltoallv.py  osu_barrier.py  osu_bcast.py  osu_bibw.py  osu_bw.py  osu_gather.py  osu_latency.py  osu_multi_lat.py  osu_scatter.py  python-config
demo/wrap-nanobind/: CMakeLists.txt  helloworld.cxx  makefile  test.py
docs/: docutils.conf  download.txt  environment.yml  index.rst  install.txt  intro.txt  links.txt  makefile  mpi.txt  mpi4py-html.rst  mpi4py-latex.rst  mpi4py.bib  references.txt  titlepage.txt  tutorial.txt
misc/: buildtest.sh  buildtestall.bat  buildtestall.sh  cy2py  cycompact  env-deinompi.bat  env-lammpi.sh  env-mingw32.bat  env-mingw64.bat  env-mpich1.sh  env-mpich2.bat  env-mpich2.sh  env-mpich3.bat  env-mpich3.sh  env-msmpi.bat  env-msvc10.bat  env-msvc11.bat  env-openmpi.bat  env-openmpi.sh  env-openmpi32.bat  env-openmpi64.bat  env-py26.bat  env-py27.bat  env-py32.bat  env-py33.bat  env-py34.bat  env-py35.bat  env-py36.bat  env-py37.bat  env-py38.bat  env-sunmpi.sh  epydoc-cython.py  lammpi.env  mca-params.conf  mingw-openmpi.bat  mingw32-mpich2.bat  mingw32-openmpi.bat  mingw64-mpich2.bat  mingw64-msmpi.bat  mingw64-openmpi.bat  (+4 more)
src/: MPI.c  __init__.py  __main__.py  (+28 more)
src/mpi4py/: CMakeLists.txt  Comm.pyx  Datatype.pyx  Errhandler.pyx  Exception.pyx  ExceptionC.pyx  ExceptionP.pyx  File.pyx  Group.pyx  Info.pyx  MPI.pxd  MPI.pyi  MPI.pyx  Win.pyx  __init__.py  __init__.pyi  __main__.py  __main__.pyi  _mpiabi.py  _mpiabi.pyi  allocate.pxi  asarray.pxi  asbuffer.pxi  bench.py  bench.pyi  dl.pyi  libmpi.pxd  message.pxi  run.py  run.pyi  typing.py  typing.pyi
src/mpi4py/MPI/: CAPI.pxi  Comm.pyx  Datatype.pyx  Errhandler.pyx  ErrorCode.pyx  Exception.pyx  ExceptionC.pyx  ExceptionP.pyx  File.pyx  Group.pyx  Info.pyx  MPI.pyx  Message.pyx  Op.pyx  Request.pyx  Session.pyx  Status.pyx  Win.pyx  allocate.pxi  asarray.pxi  asbuffer.pxi  ascaibuf.pxi  asdlpack.pxi  asfspath.pxi  asgpubuf.pxi  asmemory.pxi  asstring.pxi  atimport.pxi  attrimpl.pxi  bufaimpl.pxi  commimpl.pxi  drepimpl.pxi  errhimpl.pxi  helpers.pxi  mpierrhdl.pxi  msgbuffer.pxi  msgpickle.pxi  objmodel.pxi  opimpl.pxi  reqimpl.pxi  (+6 more)
src/mpi4py/MPI.src/: CAPI.pxi  Comm.pyx  Datatype.pyx  Errhandler.pyx  ErrorCode.pyx  Exception.pyx  File.pyx  Group.pyx  Info.pyx  MPI.pyx  Message.pyx  Op.pyx  Request.pyx  Session.pyx  Status.pyx  Win.pyx  allocate.pxi  asarray.pxi  asbuffer.pxi  ascaibuf.pxi  asdlpack.pxi  asfspath.pxi  asstring.pxi  atimport.pxi  attrimpl.pxi  bufaimpl.pxi  commimpl.pxi  constant.pxi  drepimpl.pxi  errhimpl.pxi  msgbuffer.pxi  msgpickle.pxi  objmodel.pxi  opimpl.pxi  reqimpl.pxi  stdlib.pxi  typedec.pxi  typemap.pxi  typestr.pxi
src/mpi4py/futures/: __init__.py  __init__.pyi  __main__.py  _base.py  _base.pyi  _core.py  _core.pyi  _lib.py  _lib.pyi  _spawn.py  _worker.py  aplus.py  aplus.pyi  pool.py  pool.pyi  server.py  util.py  util.pyi
src/mpi4py/include/: mpi4py.MPI.pxd
src/mpi4py/include/mpi4py/: mpi4py.h  mpi4py.i
src/mpi4py/util/: dtlib.py  dtlib.pyi  pkl5.py  pkl5.pyi  pool.py  pool.pyi  sync.py  sync.pyi
(+453 files in other folders)
