[project]
name = "mpi4py"
dynamic = ["version", "readme"]
description = "Python bindings for MPI"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  {name = "Lisandro Dalcin", email = "dalcinl@gmail.com"},
]
keywords = [
  "scientific computing",
  "parallel computing",
  "message passing interface",
  "MPI",
]
classifiers = [
  "Development Status :: 6 - Mature",
  "Environment :: GPU",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: C",
  "Programming Language :: Cython",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
[project.urls]
Homepage      = "https://mpi4py.github.io/mpi4py/"
Documentation = "https://mpi4py.readthedocs.io/en/stable/"
Source        = "https://github.com/mpi4py/mpi4py"
Issues        = "https://github.com/mpi4py/mpi4py/issues"
Discussions   = "https://github.com/mpi4py/mpi4py/discussions"
Downloads     = "https://github.com/mpi4py/mpi4py/releases"

[build-system]
requires = ["setuptools >= 77", "build"]
build-backend = "builder"
backend-path = ["conf"]

[dependency-groups]
build-cython = [
  "cython >= 3.0.1",
]
build-mesonpy = [
  "meson-python",
]
build-skbuild = [
  "scikit-build-core",
]
build = [
  "setuptools >= 77",
  {include-group = "build-cython"},
]
cover = [
  {include-group = "test"},
  "coverage",
]
docs = [
  "docutils >= 0.21",
  "sphinx == 8.1.3; python_version <  '3.12'",
  "sphinx == 9.1.0; python_version >= '3.12'",
  "sphinx-copybutton == 0.5.2",
  "sphinx-rtd-theme == 3.1.0",
]
lint = [
  "codespell",
  {include-group = "build-cython"},
  "cython-lint",
  "pylint",
  "ruff",
  "shellcheck-py",
  "yamllint",
]
test = [
  "cffi; implementation_name == 'cpython'",
  "numpy",
  "pyyaml",
]
type = [
  "mypy >= 1.0.0",
  "numpy",
]

[tool.scikit-build]
minimum-version = "0.5"
experimental = true
sdist.exclude = [".*"]
wheel.packages = []
[tool.scikit-build.metadata]
version = {provider = "metadata", provider-path = "conf"}
readme  = {provider = "metadata", provider-path = "conf"}
